2010-05-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (prog-mode): New (abstract) major mode.
	* emacs-lisp/lisp-mode.el (emacs-lisp-mode, lisp-mode): Use it.
	* progmodes/sh-script.el (sh-mode): Remove redundant var assignment.

2010-05-14  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/sql.el (sql-oracle-program): Reflow docstring.
	(sql-oracle-scan-on, sql-sybase-program, sql-product-font-lock)
	(sql-add-product-keywords, sql-highlight-product, sql-set-product)
	(sql-make-alternate-buffer-name, sql-placeholders-filter)
	(sql-escape-newlines-filter, sql-input-sender)
	(sql-send-magic-terminator, sql-sybase): Fix typos in docstrings.

2010-05-13  Chong Yidong  <cyd@stupidchicken.com>

	Add TeX open-block and close-block keybindings to SGML, and vice
	versa.

	* textmodes/tex-mode.el (tex-mode-map): Bind C-c C-t to
	latex-open-block and C-c / to latex-close-block.

	* textmodes/sgml-mode.el (sgml-mode-map): Bind C-c C-o to sgml-tag
	and C-c C-e to sgml-close-tag.

2010-05-13  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (with-progress-reporter): Create reporter object
	only when the message would be displayed.  Handled nested calls.
	(tramp-handle-load, tramp-handle-file-local-copy)
	(tramp-handle-insert-file-contents, tramp-handle-write-region)
	(tramp-maybe-send-script, tramp-find-shell):
	Use `with-progress-reporter'.
	(tramp-handle-dired-compress-file, tramp-maybe-open-connection):
	Fix message text.

	* net/tramp-smb.el (tramp-smb-handle-copy-file)
	(tramp-smb-handle-file-local-copy, tramp-smb-handle-rename-file)
	(tramp-smb-handle-write-region, tramp-smb-maybe-open-connection):
	Use `with-progress-reporter'.

2010-05-13  Agustín Martín  <agustin.martin@hispalinux.es>

	* ispell.el (ispell-init-process): Do not kill ispell process
	everytime when spellchecking from the minibuffer (bug#6143).

2010-05-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/sh-script.el (sh-mode): Use define-derived-mode.
